:bug: Fix font & social link height on safari

--- a/public/components/icons.module.css
+++ b/public/components/icons.module.css
@@ -1,5 +1,5 @@
 .social-icon {
   fill: white;
-  height: 100%;
-  width: 100%;
+  height: 3em;
+  width: 3em;
 }
