--- a/public/components/project.module.css
+++ b/public/components/project.module.css
@@ -26,7 +26,7 @@
   color: white;
   font-size: 2em;
   line-height: 1em;
-  font-weight: 800;
+  font-weight: 700;
   text-align: center;
   margin: 0;
 }
