--- a/public/components/typography.module.css
+++ b/public/components/typography.module.css
@@ -1,5 +1,5 @@
 .title {
-  font-weight: 800;
+  font-weight: 700;
   font-size: 4em;
   line-height: 1em;
   color: rgba(0, 0, 0, 0);
@@ -10,7 +10,7 @@
 }
 
 .subtitle {
-  font-weight: 800;
+  font-weight: 700;
   font-size: 1.5em;
   color: white;
 
