--- a/public/sections/social-links.module.css
+++ b/public/sections/social-links.module.css
@@ -2,8 +2,6 @@
   display: flex;
   justify-content: center;
   padding: 10px 0px 25px 0px;
-  height: 50px;
-  width: 100%;
 
   gap: 20px;
 }
