--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: "Source Sans 3", sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
